Add Google OAuth and Gmail API integration

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@motiadev/core": "0.1.0-alpha.5  ",
     "@motiadev/workbench": "0.1.0-alpha.5",
     "axios": "^1.6.7",
+    "gmail-api-parse-message-ts": "^2.2.33",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^146.0.0",
     "motia": "0.1.0-alpha.5",
     "react": "^19.0.0",
     "zod": "^3.24.2"
