Add Google OAuth and environment configuration for Gmail Account Manager

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,13 @@ HUGGINGFACE_API_TOKEN=your_huggingface_token
 
 # Discord webhook for daily summary
 DISCORD_WEBHOOK_URL=your_discord_webhook_url
+
+# Google OAuth2 credentials # andersonofl@gmail.com
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_PUBSUB_TOPIC=your_google_topic_name
+GOOGLE_REDIRECT_URI=your_google_redirect_uri
+
+# Auto responder name and email
+AUTO_RESPONDER_NAME=your_name
+AUTO_RESPONDER_EMAIL=your_email
